# janus-graph-connector

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  connect-gremlin.sh  docker-compose-cql-es.yml  main.py  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: build.yml
janus_graph_connector/: graph_utils.py
saved_dict/: NODE_DICT.json  NODE_DICT2.json  RELATION_DICT.json  RELATION_DICT2.json
tests/: test_janus_graph_connector.py
